--- a/simplefoc_stm32f103.ioc
+++ b/simplefoc_stm32f103.ioc
@@ -42,18 +42,19 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB4
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -61,7 +62,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -101,6 +102,8 @@ PA3.Locked=true
 PA3.Signal=ADCx_IN3
 PA4.Locked=true
 PA4.Signal=ADCx_IN4
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
